[package]
categories = ["cryptography", "embedded"]
edition = "2018"
keywords = ["did", "embedded", "iot", "root-of-trust"]
name = "nodex-didcomm"
readme = "README.md"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2.6.0"
cuid = "1.3.2"
hex = "0.4.3"
http = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_jcs = "0.1.0"
thiserror = "1.0.63"
sha2 = "0.10.8"
rand_core = "0.6.4"
zeroize = "1.8.1"
k256 = { version = "0.13.3", features = [
    "ecdh",
    "ecdsa",
    "serde",
    "sha256",
] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
didcomm-rs = { git = "https://github.com/nodecross/didcomm-rs.git", tag = "v0.8.1", default-features = false, features = ["raw-crypto"] }

[dev-dependencies]
actix-rt = "2.10.0"
rand = "0.8.5"
